# dotplot

./: CMakeLists.txt  LICENSE  README.md  main.cpp  toy.paf
include/: classes.h  main.h  svg.h  utils.h
src/: classes.cpp  main.cpp  utils.cpp
